tmux_logs/training_pt_lego_binocc_unfixedoptconf_nogate_noreg_5xconf_0711_173716_exit.log
⚠️  TMUX SESSION EXITED UNEXPECTEDLY AT Fri Jul 11 05:38:05 PM CEST 2025
Exit code: 0
Last 50 lines of training log:
=====================================
PyTorch version: 2.7.1+cu128
CUDA available: True
GPU name: NVIDIA GeForce RTX 5090

🚀 Starting ZipNeRF Potential+Triplane training...
🎬 Scene: lego
💬 Comment: binocc_unfixedoptconf_nogate_noreg_5xconf
🔲 Binary Occupancy: False
⏰ Started at: Fri Jul 11 05:37:25 PM CEST 2025
📁 Data directory: /home/nilkel/Projects/data/nerf_synthetic/lego
📋 Config: configs/potential_triplane.gin

💻 Training command:
accelerate launch train.py --gin_configs=configs/potential_triplane.gin --gin_bindings="Config.data_dir = '/home/nilkel/Projects/data/nerf_synthetic/lego'" --gin_bindings="Config.debug_confidence_grid_path = 'debug_grids/debug_confidence_grid_128.pt'" --gin_bindings="Config.freeze_debug_confidence = False" --gin_bindings="Config.binary_occupancy = False" --gin_bindings="Config.comment = 'binocc_unfixedoptconf_nogate_noreg_5xconf'"

ipex flag is deprecated, will be removed in Accelerate v1.10. From 2.7.0, PyTorch has all needed optimizations for Intel CPU and XPU.
/home/nilkel/Projects/zipnerf-pytorch/gridencoder/grid.py:23: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.
  def forward(ctx, backend, inputs, embeddings, offsets, per_level_scale, base_resolution, calc_grad_inputs=False, gridtype=0, align_corners=False, interpolation=0):
/home/nilkel/Projects/zipnerf-pytorch/gridencoder/grid.py:66: FutureWarning: `torch.cuda.amp.custom_bwd(args...)` is deprecated. Please use `torch.amp.custom_bwd(args..., device_type='cuda')` instead.
  def backward(ctx, grad):
/home/nilkel/Projects/zipnerf-pytorch/gridencoder/grid.py:179: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  @torch.cuda.amp.autocast(enabled=False)
/home/nilkel/Projects/zipnerf-pytorch/gridencoder/grid.py:273: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  @torch.cuda.amp.autocast(enabled=False)
Traceback (most recent call last):
  File "/home/nilkel/Projects/zipnerf-pytorch/train.py", line 17, in <module>
    from internal import models
  File "/home/nilkel/Projects/zipnerf-pytorch/internal/models.py", line 20, in <module>
    from internal.field import ConfidenceField
  File "/home/nilkel/Projects/zipnerf-pytorch/internal/field.py", line 215
    conf_grid = self.get_confidence().unsqueeze(0).unsqueeze(0)  # (1, 1, D, H, W)
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/home/nilkel/miniconda3/envs/zipnerf2/bin/accelerate", line 8, in <module>
    sys.exit(main())
  File "/home/nilkel/miniconda3/envs/zipnerf2/lib/python3.9/site-packages/accelerate/commands/accelerate_cli.py", line 50, in main
    args.func(args)
  File "/home/nilkel/miniconda3/envs/zipnerf2/lib/python3.9/site-packages/accelerate/commands/launch.py", line 1199, in launch_command
    simple_launcher(args)
  File "/home/nilkel/miniconda3/envs/zipnerf2/lib/python3.9/site-packages/accelerate/commands/launch.py", line 785, in simple_launcher
    raise subprocess.CalledProcessError(returncode=process.returncode, cmd=cmd)
subprocess.CalledProcessError: Command '['/home/nilkel/miniconda3/envs/zipnerf2/bin/python3.9', 'train.py', '--gin_configs=configs/potential_triplane.gin', "--gin_bindings=Config.data_dir = '/home/nilkel/Projects/data/nerf_synthetic/lego'", "--gin_bindings=Config.debug_confidence_grid_path = 'debug_grids/debug_confidence_grid_128.pt'", '--gin_bindings=Config.freeze_debug_confidence = False', '--gin_bindings=Config.binary_occupancy = False', "--gin_bindings=Config.comment = 'binocc_unfixedoptconf_nogate_noreg_5xconf'"]' returned non-zero exit status 1.

✅ Training completed successfully!
⏰ Finished at: Fri Jul 11 05:37:34 PM CEST 2025
📄 Full log: ./tmux_logs/training_pt_lego_binocc_unfixedoptconf_nogate_noreg_5xconf_0711_173716.log
📁 Check results in: exp/

❌ Training failed at line 76. Check logs: ./tmux_logs/training_pt_lego_binocc_unfixedoptconf_nogate_noreg_5xconf_0711_173716.log
=====================================
Process list at exit:
root        1504  0.0  0.0 112248  3220 ?        Ssl  Jun03   0:00 /usr/bin/python3 /usr/share/unattended-upgrades/unattended-upgrade-shutdown --wait-for-signal
root       11054  0.0  0.0  61392  3960 ?        S    Jun03   0:00 python3 /usr/lib/software-properties/software-properties-dbus
lisa     1994820 57.2  1.2 25921540 846108 ?     Sl   14:44  99:33 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995004 83.4  0.2 19470388 167908 ?     Rl   14:44 145:01 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995005 78.2  0.1 19470376 129528 ?     Rl   14:44 136:08 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995006 80.1  0.3 19532392 205568 ?     Rl   14:44 139:26 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995007 80.9  0.2 19524668 195328 ?     Rl   14:44 140:48 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995194  3.1  0.2 21250156 158756 ?     Sl   14:44   5:24 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995195  3.0  0.2 21250168 159096 ?     Sl   14:44   5:17 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995196  3.1  0.2 21250180 158332 ?     Sl   14:44   5:28 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
lisa     1995197  3.1  0.2 21250192 158400 ?     Sl   14:44   5:25 python my_train.py --exp_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs --checkpoints_dir /mnt/lisa_hdd/I2IReg/train/experiment_outputs
nilkel   2058246  0.1  0.0  15720  4764 ?        Ss   17:37   0:00 tmux new-session -d -s train_pt_lego_0711_173716 -c /home/nilkel/Projects/zipnerf-pytorch
nilkel   2058266  0.0  0.0  10056  1680 pts/6    S    17:37   0:00 /bin/bash ./train_pt_tmux.sh lego binocc_unfixedoptconf_nogate_noreg_5xconf
